# autoresearch-gdpa1

./: README.md  modal_run.py  prepare.py  program.md  pyproject.toml  train.py
data/: GDPa1.csv
