[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous antibody developability prediction research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "modal>=1.0.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "torch>=2.5.0",
]
